# cileserver

./: .gitignore  Makefile  README.md  install.sh  meson.build
.github/workflows/: pages.yml
config/: cileserver.example.conf  users.auth
docs/: CNAME  Gemfile  TODO.md  _config.yml  architecture.md  authentication.md  client.md  configuration.md  file_operations.md  index.md  logging.md  protocol.md  server.md
include/: auth.h  config.h  file_ops.h  logger.h  protocol.h  server.h
src/: auth.c  client.c  config.c  file_ops.c  logger.c  main.c  protocol.c  server.c
tests/: test_file_ops.c
